# kube-netpol

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
blog/: dev-to-kube-netpol.md
kube_netpol/: __init__.py  cli.py  demo.py  models.py  parser.py
kube_netpol/analyzers/: __init__.py  simulator.py  validator.py
kube_netpol/generators/: __init__.py  policy_generator.py
kube_netpol/reporters/: __init__.py  export_reporter.py  terminal_reporter.py  visualizer.py
tests/: conftest.py  test_cli.py  test_generator.py  test_models.py  test_parser.py  test_simulator.py  test_validator.py
